syntax = "proto3";

message Schema {
    enum Type {
        Text = 0;
        Image = 1;
        File = 2;
        Number = 3;
    }

    message Field {
        string key = 1;
        string label = 2;
        Type type = 3;
    }

    string id = 1;
    string name = 2;
    repeated Field fields = 3;
}

message Step {
    message Handler {
        string processScriptTxn = 1;
        int32 createTaskStepIdx = 2;
        string assignee = 3;
        int32 funds = 4;
    }

    string name = 1;
    string schemaTxn = 2;
    int32 fundsRequired = 3;
    string payee = 4;
    string validationScriptTxn = 5;
    repeated Handler onComplete = 6;
}

message Workflow {
    string id = 1;
    string owner = 2;
    repeated Step steps = 3;
}

message WorkflowState {
    enum Status {
        Open = 0;
        Error = 1;
        Complete = 2;
    }

    message UTXO {
        string txId = 1;
        int32 vout = 2;
        string address = 3;
        string script = 4;
        int32 satoshis = 5;
    }

    message Task {
        Step step = 1;
        Status status = 2;
        UTXO utxo = 3;
    }

    string id = 1;
    string workflowTxn = 2;
    Status status = 3;
    string state = 4; // JSON representation of state values
    repeated Task tasks = 5;
}